# claw-router

./: .dockerignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  ROADMAP.md  config.example.toml
.github/: copilot-instructions.md
.github/instructions/: phased-commit.instructions.md
.github/workflows/: release.yml
docs/: architecture.mmd  configuration.md  ha-classify-routing-study.md  setup.md
etc/lm-gateway/: config.toml  lm-gateway.service
etc/lm-gateway/profiles/: agent.toml  code-audit.toml  ha-auto.toml
src/: config.rs  error.rs  main.rs  router.rs  traffic.rs
src/api/: admin.rs  admin_auth.rs  admin_ui.html  client.rs  client_auth.rs  health.rs  metrics.rs  mod.rs  rate_limit.rs  request_id.rs  status.rs
src/api/client/: mod.rs  ollama.rs
src/backends/: anthropic.rs  mod.rs  ollama.rs  openai.rs
src/config/: gateway.rs  mod.rs  profile.rs
src/router/: mod.rs  modes.rs  priority.rs
test-fixtures/security/: README.md
tools/: Restart-OllamaService.ps1  Sync-LmGateway.ps1  Test-Classification.ps1  Test-GatewayProfile.ps1  Test-OllamaHealth.ps1
